--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ hr{
     width: 60%;
     margin-left: 20px;
     line-height: 30px;
+    float: left;
     clear: both;
     margin-top: 50px;
     background-color: rgb(221, 218, 218);
@@ -114,6 +115,8 @@ hr{
     font-size: 200%;
 }
 
+/* Style right section main page */
+
 #right-picture-container{
     width: 500px;
     height: 300px;
@@ -125,12 +128,12 @@ hr{
     margin-top: 20px;
 }
 
-#picture-cover-bg{
+#right-picture-bg{
     background: url('../images/rsz_1right_1.jpg') no-repeat center center;
     height: 100%;
 }
 
-#right-picture-down{
+#right-picture-container-down{
     width: 500px;
     height: 300px;
     padding: 20px;
@@ -143,7 +146,40 @@ hr{
     
 }
 
-#picture-cover-bg-down{
+#right-picture-bg-down{
     background: url('../images/rsz_right_2.jpg') no-repeat center center;
     height: 100%;
 }
+
+/* Style center section main page */
+
+#center-picture{
+    width: 450px;
+    height: 300px;
+    padding: 20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+       margin: 0 auto;
+}
+
+#center-picture-bg{
+    background: url('../images/rsz_1pexels-barbara-olsen-7882530.jpg') no-repeat center center;
+    height: 100%;
+}
+
+#center-picture-down{
+    width: 450px;
+    height: 300px;
+    padding: 20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+       margin: 0 auto;
+}
+
+#center-picture-bg-down{
+    background: url('../images/rsz_1pexels-jean-van-der-meulen-1559388.jpg') no-repeat center center;
+    height: 100%;
+}
+
