--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,15 @@ hr{
     height: 100%;
 }
 
+/* gallery */
+
+#photos {
+    clear:both;
+    line-height:normal;
+    column-count: 4;
+    column-gap: normal;
+}
+
+#photos > img {
+    width: 100%;
+}
