--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ hr{
     border-style: solid;
     border-color: black;
     border-width: 1px;
-       margin: 0 auto;
+       margin-bottom: 20px;
 
 }
 
@@ -176,7 +176,7 @@ hr{
     border-style: solid;
     border-color: black;
     border-width: 1px;
-       margin: 0 auto;
+       margin-top: 30px;
 }
 
 #center-picture-bg-down{
@@ -195,4 +195,29 @@ hr{
 
 #photos > img {
     width: 100%;
+}
+
+/*Style table*/
+
+#service {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#service td, #service th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#service tr:nth-child(even){background-color: #f2f2f2;}
+
+#service tr:hover {background-color: #ddd;}
+
+#service th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(136, 78, 78);
+  color: white;
 }
