--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,20 +92,20 @@ h2 {
     margin: 0 auto;
 }
 
-hr{
+hr {
     border-top: 1px dashed black;
     width: 100%;
     margin: 6px 0;
 }
 
-.left-about-heading{
+.left-about-heading {
     width: 70%;
     margin-left: 20px;
     line-height: 30px;
     float: left;
     clear: both;
     margin-top: 50px;
-    
+
 }
 
 #welcome {
@@ -117,7 +117,7 @@ hr{
 
 /* Style right section main page */
 
-#right-picture-container{
+#right-picture-container {
     width: 500px;
     height: 300px;
     padding: 20px;
@@ -128,12 +128,12 @@ hr{
     margin-top: 20px;
 }
 
-#right-picture-bg{
+#right-picture-bg {
     background: url('../images/rsz_1right_1.jpg') no-repeat center center;
     height: 100%;
 }
 
-#right-picture-container-down{
+#right-picture-container-down {
     width: 500px;
     height: 300px;
     padding: 20px;
@@ -143,43 +143,43 @@ hr{
     float: left;
     margin-top: 30px;
     margin-bottom: 30px;
-    
+
 }
 
-#right-picture-bg-down{
+#right-picture-bg-down {
     background: url('../images/rsz_right_2.jpg') no-repeat center center;
     height: 100%;
 }
 
 /* Style center section main page */
 
-#center-picture{
+#center-picture {
     width: 450px;
     height: 300px;
     padding: 20px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
-       margin-bottom: 20px;
+    margin-bottom: 20px;
 
 }
 
-#center-picture-bg{
+#center-picture-bg {
     background: url('../images/rsz_1pexels-barbara-olsen-7882530.jpg') no-repeat center center;
     height: 100%;
 }
 
-#center-picture-down{
+#center-picture-down {
     width: 450px;
     height: 300px;
     padding: 20px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
-       margin-top: 30px;
+    margin-top: 30px;
 }
 
-#center-picture-bg-down{
+#center-picture-bg-down {
     background: url('../images/rsz_1pexels-jean-van-der-meulen-1559388.jpg') no-repeat center center;
     height: 100%;
 }
@@ -187,37 +187,54 @@ hr{
 /* gallery */
 
 #photos {
-    clear:both;
-    line-height:normal;
+    clear: both;
+    line-height: normal;
     column-count: 4;
     column-gap: normal;
 }
 
-#photos > img {
+#photos>img {
     width: 100%;
 }
 
 /*Style table*/
 
 #service {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
 
-#service td, #service th {
-  border: 1px solid #ddd;
-  padding: 8px;
+#service td,
+#service th {
+    border: 1px solid #ddd;
+    padding: 8px;
 }
 
-#service tr:nth-child(even){background-color: #f2f2f2;}
+#service tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
 
-#service tr:hover {background-color: #ddd;}
+#service tr:hover {
+    background-color: #ddd;
+}
 
 #service th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: rgb(136, 78, 78);
-  color: white;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(136, 78, 78);
+    color: white;
+}
+
+#price-list {
+    text-align: center;
+    margin-top: 30px;
+}
+
+#contact {
+    background-color: rgb(224, 187, 169);
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
