--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,23 +73,29 @@ h2 {
     height: 700px;
     margin-left: 40px;
     margin-top: 40px;
+
 }
 
 #left-about {
-    padding-top: 30px;
+    padding-top: 10px;
     width: 35%;
     float: left;
+
+
 }
 
 #right-about {
     padding-top: 30px;
     width: 35%;
     float: right;
+
 }
 
 #center-about {
     width: 33%;
     margin: 0 auto;
+    padding-top: 50px;
+
 }
 
 hr {
@@ -104,7 +110,8 @@ hr {
     line-height: 30px;
     float: left;
     clear: both;
-    margin-top: 50px;
+    margin-top: 20px;
+
 
 }
 
@@ -118,8 +125,8 @@ hr {
 /* Style right section main page */
 
 #right-picture-container {
-    width: 500px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     padding: 20px;
     border-style: solid;
     border-color: black;
@@ -134,8 +141,8 @@ hr {
 }
 
 #right-picture-container-down {
-    width: 500px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     padding: 20px;
     border-style: solid;
     border-color: black;
@@ -154,8 +161,8 @@ hr {
 /* Style center section main page */
 
 #center-picture {
-    width: 450px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     padding: 20px;
     border-style: solid;
     border-color: black;
@@ -170,8 +177,8 @@ hr {
 }
 
 #center-picture-down {
-    width: 450px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     padding: 20px;
     border-style: solid;
     border-color: black;
@@ -238,3 +245,35 @@ hr {
     padding-bottom: 20px;
     padding-top: 20px;
 }
+
+/* style footer*/
+
+footer {
+    position:absolute;
+        width: 100%;
+    text-align: center;
+    padding-top: 250px;
+    
+
+}
+
+.social-networks {
+    text-align: center;
+    
+
+}
+
+.social-networks>li {
+    display: inline;
+   
+    
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+
