--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,14 +105,12 @@ hr {
 }
 
 .left-about-heading {
-    width: 70%;
+    width: 90%;
     margin-left: 20px;
     line-height: 30px;
     float: left;
     clear: both;
-    margin-top: 20px;
-
-
+    
 }
 
 #welcome {
@@ -125,14 +123,15 @@ hr {
 /* Style right section main page */
 
 #right-picture-container {
-    width: 600px;
+    width: 400px;
     height: 400px;
-    padding: 20px;
+    padding: 10px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
     float: left;
     margin-top: 20px;
+    margin-left: 80px;
 }
 
 #right-picture-bg {
@@ -141,15 +140,16 @@ hr {
 }
 
 #right-picture-container-down {
-    width: 600px;
+    width: 400px;
     height: 400px;
-    padding: 20px;
+    padding: 10px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
     float: left;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-left: 80px;
 
 }
 
@@ -161,14 +161,14 @@ hr {
 /* Style center section main page */
 
 #center-picture {
-    width: 600px;
+    width: 400px;
     height: 400px;
-    padding: 20px;
+    padding: 10px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
     margin-bottom: 20px;
-
+    margin-left: 110px;
 }
 
 #center-picture-bg {
@@ -177,13 +177,14 @@ hr {
 }
 
 #center-picture-down {
-    width: 600px;
+    width: 400px;
     height: 400px;
-    padding: 20px;
+    padding: 10px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
     margin-top: 30px;
+    margin-left: 110px;
 }
 
 #center-picture-bg-down {
@@ -249,24 +250,19 @@ hr {
 /* style footer*/
 
 footer {
-    position:absolute;
-        width: 100%;
+    position: absolute;
+    width: 100%;
     text-align: center;
     padding-top: 250px;
-    
-
+    margin-top: 50px;
 }
 
 .social-networks {
     text-align: center;
-    
-
 }
 
 .social-networks>li {
     display: inline;
-   
-    
 }
 
 .social-networks i {
@@ -276,4 +272,33 @@ footer {
     color: #3a3a3a;
 }
 
+/* media queries */
+/* For larger to mediun screen size from 1500 px wide and down */
 
+@media screen and (max-width: 1500px) {
+#about-us {
+    width: 65%;
+    height: 1200px;
+    margin: 0 auto;
+}
+
+#welcome{
+    padding: 10% 0;
+}
+
+#left-about, #right-about{
+    width: 100%;
+    float: left;
+    padding: 0;
+}
+#center-about{
+    clear: both;
+    width: 100%;
+    float: left;
+    padding: 0;
+}
+
+hr{
+    display: none;
+}
+}
