--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,3 +302,15 @@ hr{
     display: none;
 }
 }
+
+/*For mediun screen sizes from 900px wide and down */
+@media screen and (max-width: 900px){
+
+    #menu{
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
