--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,16 @@ hr {
     width: 100%;
 }
 
+/* style footer*/
+
+  
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;   /* Height of the footer */
+    background: #6cf;
+ }
 /*Style table*/
 
 #service {
@@ -247,29 +257,21 @@ hr {
     padding-top: 20px;
 }
 
-/* style footer*/
 
-footer {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    margin-top: auto;
-
-}
 
 .social-networks {
     text-align: center;
 }
 
-.social-networks>li {
+.social-networks > li {
     display: inline;
 }
 
 .social-networks i {
     font-size: 160%;
-    margin: 1%;
+    margin: 5%;
     padding: 5%;
-    color: #3a3a3a;
+    color: black;
 }
 
 /* media queries */
@@ -291,6 +293,12 @@ footer {
         width: 100%;
         float: left;
         padding: 0;
+        margin-left: 30px;
+    }
+
+    .opening-about-heading,
+    p {
+        text-align: center;
     }
 
     #center-about {
@@ -304,10 +312,14 @@ footer {
     hr {
         display: none;
     }
+  footer {
+    position:-webkit-sticky;
+    position: sticky;
+    bottom: 0;
+  }
 
-        }
 
-
+}
 
 /*For mediun screen sizes from 900px wide and down */
 @media screen and (max-width: 900px) {
@@ -321,7 +333,7 @@ footer {
     }
 
     #about-us {
-        width: 90%;
+        width: 100%;
         height: 1200px;
         margin: 0 auto;
     }
@@ -331,37 +343,31 @@ footer {
         width: inherit;
     }
 
-.left-about-heading h2, {
-        
+    .left-about-heading h2,
+        {
+
         width: 100%;
         text-align: center;
     }
 
-    .left-about-heading p  {
+    .left-about-heading p {
         text-align: center;
         padding: 0 20px;
     }
 
-    .opening-about-heading  {
+    .opening-about-heading {
         width: 100%;
         text-align: center;
     }
-      /* Sticky Styling */
 
-      footer {
-        position: -webkit-sticky;
-        position: sticky;
-        bottom: 0;
-      }
-
-      #photos{
+   
+    #photos {
         column-count: 3;
-      }
-}
-
-@media screen and (max-width: 800px) {
-    #photos{
-        column-count: 2;
     }
 }
 
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+}
