Parse error line 345 fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ hr {
         width: inherit;
     }
 
-    .left-about-heading h2 ,
+    .left-about-heading, h2 
         {
 
         width: 100%;
@@ -370,4 +370,3 @@ hr {
         column-count: 2;
     }
 }
-
